# toggl2moneybird

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
toggl2moneybird/: __main__.py  cli.py  commands.py  menu.py  moneybird.py  sync.py  toggl.py
