[metadata]
name = toggl2moneybird
version = 0.0.1
author = rdb
author_email = me@rdb.name
description = User-friendly command-line tool for synchronizing time entries from Toggl Track to Moneybird
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Topic :: Office/Business :: Financial :: Accounting
project_urls =
    Source=https://github.com/rdb/toggl2moneybird
    Tracker=https://github.com/rdb/toggl2moneybird/issues

[options]
packages = toggl2moneybird
python_requires = >=3.8
install_requires =
    keyring
    requests
    rich
    rich-argparse

[options.entry_points]
console_scripts =
    toggl2moneybird = toggl2moneybird.cli:main
